kube-in-action/13_securing-cluster-nodes/pod-with-host-network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-host-network
spec:
  hostNetwork: true
  containers:
    - name: main
      image: alpine
      command: ["/bin/sleep", "999999"]
